tests/NormalTests/paczka1/fuzzy1/75178061.err
Error in line 5: nOj A415 e0,7
Error in line 9: wxshPAic1 A725 60,1
Error in line 14: hgcp1r A415 87,1
Error in line 25: gmdchY S218 21,2
Error in line 10: nOj A415 91,7
Error in line 37: nOj A921 68,4
